BUGFIX : Remove some button text when width is too small

--- a/src/views/App/App.css
+++ b/src/views/App/App.css
@@ -14,3 +14,14 @@
 .diagramParams {
     margin-bottom: 1rem;
 }
+@media screen and (max-width: 700px) {
+    .appShrinkableButton {
+        width: 4em;
+        white-space: pre;
+        overflow: hidden;
+    }
+
+    .appShrinkableText {
+        display: none;
+    }
+}
